exam2016-02-09/exam_report_colin2016-02-09/5-0-brainfuck.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r4p7.42.fr
Darwin 15.3.0 x86_64
$> date
Tue Feb  9 13:35:53 CET 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.3.0
Thread model: posix
$> clang --version
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.3.0
Thread model: posix

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-formation-c-exam-formation/exam_20160209/ckramer

= Git history ==================================================================
$> git -C /var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user log --pretty='%H - %an, %ad : %s'
a0d443cd8b8957c93fefeafaa8810c59b6ad75b7 - Exam 42, Tue Feb 9 13:35:29 2016 +0100 :  brainfucked no time
eebf2fcdb0700400425c32fcda57830a8507f29c - Exam 42, Tue Feb 9 13:23:30 2016 +0100 : fprime for 16 pts yes
64bd4dae4eff5b422625319bb7f467e2960c3261 - Exam 42, Tue Feb 9 12:34:36 2016 +0100 : paramsum to catch up pts
074b5765871a0461bb0ee8693698ddde3bfd48d8 - Exam 42, Tue Feb 9 12:12:10 2016 +0100 : off alpha mirror for pts
3763e00716b11955d7e8c5b938a2cc1132ad4cb7 - Exam 42, Tue Feb 9 11:49:02 2016 +0100 : reverse_bits for 11pts
f559f0b1f705e3c39b6d4ba89f76e1e47d5d4e21 - Exam 42, Tue Feb 9 11:37:58 2016 +0100 : do op for 16pts
b419328dfe53a8eb119b0176ea2b6573cf84a4b9 - Exam 42, Tue Feb 9 10:35:35 2016 +0100 : strcmp for 16pts
844152fe8de5c1a5d9da3f78bd7c6228e0ee9020 - Exam 42, Tue Feb 9 10:12:11 2016 +0100 :  hello for 16 pts
 
= Collected files ==========================================
$> ls -lAR /var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user
total 8
-rw-r--r--  1 deepthought  deepthought  2251 Feb  9 13:35 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 alpha_mirror
drwxr-xr-x  4 deepthought  deepthought   136 Feb  9 13:35 brainfuck
drwxr-xr-x  6 deepthought  deepthought   204 Feb  9 13:35 do_op
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 fprime
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 ft_strcpy
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 hello
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 paramsum
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 13:35 reverse_bits

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/alpha_mirror:
total 8
-rw-r--r--  1 deepthought  deepthought  1363 Feb  9 13:35 alpha_mirror.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/brainfuck:
total 16
-rw-r--r--  1 deepthought  deepthought  1046 Feb  9 13:35 brainfuck.c
-rw-r--r--  1 deepthought  deepthought  1008 Feb  9 13:35 ft_brain.h

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/do_op:
total 32
-rw-r--r--  1 deepthought  deepthought  1311 Feb  9 13:35 ft_do_action.c
-rw-r--r--  1 deepthought  deepthought  1104 Feb  9 13:35 ft_do_op.c
-rw-r--r--  1 deepthought  deepthought  1265 Feb  9 13:35 ft_doop.h
-rw-r--r--  1 deepthought  deepthought  1263 Feb  9 13:35 ft_operation.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/fprime:
total 8
-rw-r--r--  1 deepthought  deepthought  1398 Feb  9 13:35 fprime.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/ft_strcpy:
total 8
-rw-r--r--  1 deepthought  deepthought  1023 Feb  9 13:35 ft_strcpy.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  1141 Feb  9 13:35 hello.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/paramsum:
total 8
-rw-r--r--  1 deepthought  deepthought  1379 Feb  9 13:35 paramsum.c

/var/folders/zs/bdyzyp0n2dq2twz_t7qd5s740000gq/T/tmpyJqciB/user/reverse_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1070 Feb  9 13:35 reverse_bits.c
 
= brainfuck ====================================================================
$> clang -Wextra -Wall -Werror brainfuck.c -o user_exe 
brainfuck.c:15:6: error: variable has incomplete type 'void'
void    ft_putchar
        ^
brainfuck.c:15:16: error: expected ';' after top level declarator
void    ft_putchar
                  ^
                  ;
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
